<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Resources -->
    <string name="app_name">LoudBook</string>
    <string name="default_search_folder_name">/sdcard/loudsoft/loudbook/</string>
    <string name="default_book_config_file_name">MyFirstBook.lb.xml</string>
    <string name="loud_book_file_extension">.lb.xml</string>
    <string name="audio_file_extension">.mp3</string>

<!-- GUI text -->
    <string name="page">Page:</string>
    <string name="audio">Audio:</string>
    <string name="recent_used">Recent used:</string>

<!-- Buttons -->
    <string name="open">Open file</string>
    <string name="back">&lt; Back</string>
    <string name="browse">Browse</string>
    <string name="previous_page">&lt;&lt;&lt;</string>
    <string name="next_page">&gt;&gt;&gt;</string>    
    <string name="abort">Abort</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>

<!-- Error messages -->
    <string name="sd_card_isnt_available">SD card is not available!</string>
    <string name="parsing_error">Parsing error!</string>

<!-- Status messages -->
    <string name="parsing_please_wait">Parsing. Please wait...</string>

<!-- File dialog resources -->
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="create">Create</string>
    <string name="no_data">No Data</string>
    
<!-- Colors -->
	<color name="gray">#ffff0000</color>
	<color name="orange">#ffffa500</color>

<!-- Preferences -->
	<string name="user_settings">User settings</string>
	<string name="delay">Delay</string>
	<string name="preferences">Preferences</string>
	<string name="title_search_directory">Search directory</string>
	<string name="dialog_title_directory">Choose directory</string>
	<string name="search_dir_pref_key">search_dir_pref_key</string>
</resources>
