<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/user_settings">
		<EditTextPreference android:key="delay"
			android:title="@string/delay"></EditTextPreference>
<!-- 
		<ListPreference android:key="default_directory_list"
			android:defaultValue="@string/default_search_folder_name"
			android:title="@string/title_search_directory" android:summary="@string/default_search_folder_name"
			android:entries="@array/choose_directory_list" android:entryValues="@array/entryvalues_choose_directory_list"
			android:dialogTitle="@string/dialog_title_directory" />
-->
		<Preference android:summary="@string/default_search_folder_name" android:title="@string/title_search_directory" android:key="@string/search_dir_pref_key"></Preference>
	</PreferenceCategory>
</PreferenceScreen>
