<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/app_name"
		android:textStyle="bold" android:typeface="monospace" android:gravity="center"/>
	<EditText android:id="@+id/search_folder_name"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:text="@string/default_search_folder_name"/>
	<EditText android:text="@string/default_book_config_file_name"
		android:id="@+id/book_config_file_name" android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	<Button android:text="@string/open" android:id="@+id/open_config_file_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="200dip" android:layout_gravity="center"/>
</LinearLayout>
