<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="wrap_content">
		<TextView android:layout_height="wrap_content" android:text="@string/page" android:layout_width="wrap_content" android:id="@+id/page_text" android:paddingLeft="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/page_number_text" android:text="0" android:paddingLeft="5dip"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio" android:paddingLeft="15dip" android:id="@+id/audio_text"></TextView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/audio_file_base_name" android:text="-" android:paddingLeft="5dip"></TextView>
	</LinearLayout>
	<ScrollView android:id="@+id/scrollView1"
				android:layout_height="wrap_content" android:text="TextView"
			android:scrollbarStyle="outsideInset" android:layout_width="fill_parent"
		android:layout_weight="1">
		<TextView android:scrollbars="vertical" android:id="@+id/main_text_view"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="" android:scrollbarStyle="outsideInset"/>
	</ScrollView>
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
		<Button android:layout_height="wrap_content" android:text="@string/back" android:layout_width="wrap_content" android:id="@+id/back_button" android:layout_gravity="center_horizontal"></Button>
		<Button android:layout_height="wrap_content" android:text="@string/previous_page" android:id="@+id/previous_page_button" android:layout_width="fill_parent" android:layout_weight="2" android:enabled="false"></Button>
		<Button android:layout_height="wrap_content" android:text="@string/pause" android:id="@+id/pause_button" android:enabled="false" android:layout_width="60dip"></Button>
		<Button android:layout_height="wrap_content" android:text="@string/next_page" android:id="@+id/next_page_button" android:layout_width="fill_parent" android:layout_weight="2" android:enabled="false"></Button>
	</LinearLayout>
</LinearLayout>
